--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
-<body>
+<body background="https://th.bing.com/th/id/Raf0117dd4cfdb00fc1b86ee7c58d16a6?rik=QoDYAaejDtyHSQ&riu=http%3a%2f%2fspoonfulofscotland.com%2fwp-content%2fuploads%2f2016%2f12%2fcontact1.jpg&ehk=h69OkGblIwBfQg4fUwITFE1JX5rFeblJc04t4Ed8TMQ%3d&risl=&pid=ImgRaw">
+    <nav class="navbar navbar-expand-lg navbar-light custome-bg">
+        <a class="navbar-brand" href="index.html">MyCV</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CV</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
+
   <section class="mb-4">
 
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+    <h2 class="h1-responsive font-weight-bold text-center my-4 nomargin">Get In Contact</h2>
     <div class="row">
 
         <div class="col-md-12 mb-md-0 mb-5">
@@ -56,7 +78,7 @@
 
             </form>
 
-            <div class="text-center text-md-left">
+            <div class="text-center">
                 <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
             </div>
             <div class="status"></div>
