--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
       
       <footer class="container">
         <div class="row">
-          <ul class="col-sm-12 col-lg-6">
+          <ul class="col-sm-12 col-lg-6 social-media">
             <li><a href="https://www.linkedin.com/home/?originalSubdomain=ie"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a></li>
+          </ul>
+          <ul class="col-sm-12 col-lg-6 social-media">
+            <li><a href="https://github.com/"><i class="fab fa-github-square"></i></a></li>
+            <li><a href="https://www.youtube.com/"><i class="fab fa-youtube-square"></i></a></li>
           </ul>
         </div>
       </footer>
