--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
       </nav>
       
-      <footer class="container">
+      <footer class="container-fluid">
         <div class="row">
           <ul class="col-sm-12 col-lg-6 social-media">
             <li><a href="https://www.linkedin.com/home/?originalSubdomain=ie"><i class="fab fa-linkedin"></i></a></li>
