--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
   <section class="mb-4">
 
-    <h2 class="h1-responsive font-weight-bold text-center my-4 nomargin">Get In Contact</h2>
+    <h2 class="h1-responsive font-weight-bold text-center my-4 nomargin"><span>Get In Contact</span></h2>
     <div class="row">
 
         <div class="col-md-12 mb-md-0 mb-5">
@@ -79,7 +79,7 @@
             </form>
 
             <div class="text-center">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                <a class="btn-lg btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
             </div>
             <div class="status"></div>
         </div>
